--- a/package.json
+++ b/package.json
@@ -15,13 +15,19 @@
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.10",
     "gatsby-plugin-sharp": "^2.0.32",
+    "gatsby-remark-prismjs": "^3.2.7",
     "gatsby-source-filesystem": "^2.0.27",
     "gatsby-transformer-remark": "^2.3.8",
     "gatsby-transformer-sharp": "^2.1.17",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "remark-autolink-headings": "^5.1.0",
+    "remark-gemoji": "^4.0.2",
+    "remark-gemoji-to-emoji": "^1.1.0",
+    "remark-images": "^0.18.0",
+    "remark-slug": "^5.1.1"
   },
   "devDependencies": {
     "prettier": "^1.16.4"
