--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "prettier": "^1.18.2"
   },
   "keywords": [
-    "gatsby"
+    "gatsby",
+    "rubybyexample"
   ],
   "license": "MIT",
   "scripts": {
@@ -46,9 +47,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/ngetahun/rubybyexample"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/ngetahun/rubybyexample/issues"
   }
 }
