--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "Natnael Getahun <connect@ngetahun.me>",
   "dependencies": {
     "@mdx-js/mdx": "^0.20.3",
+    "@mdx-js/react": "^1.0.27",
     "@mdx-js/tag": "^0.20.3",
+    "eslint": "^6.0.1",
     "gatsby": "^2.13.15",
     "gatsby-cli": "^2.7.2",
     "gatsby-image": "^2.2.5",
@@ -15,10 +17,13 @@
     "gatsby-plugin-offline": "^2.2.0",
     "gatsby-plugin-react-helmet": "^3.1.2",
     "gatsby-plugin-sharp": "^2.2.1",
-    "gatsby-remark-prismjs": "^3.2.7",
+    "gatsby-remark-prismjs": "^3.3.3",
     "gatsby-source-filesystem": "^2.1.4",
-    "gatsby-transformer-remark": "^2.5.0",
+    "gatsby-transformer-remark": "^2.6.4",
     "gatsby-transformer-sharp": "^2.2.0",
+    "jshint": "^2.10.2",
+    "prism-react-renderer": "^0.1.7",
+    "prismjs": "^1.16.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -27,7 +32,9 @@
     "remark-gemoji": "^4.0.3",
     "remark-gemoji-to-emoji": "^1.1.0",
     "remark-images": "^1.0.0",
-    "remark-slug": "^5.1.1"
+    "remark-slug": "^5.1.1",
+    "styled-components": "^4.3.2",
+    "unified-ui": "0.0.3"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
