--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@mdx-js/mdx": "^0.20.3",
     "@mdx-js/react": "^1.0.27",
     "@mdx-js/tag": "^0.20.3",
+    "carbon-components": "^10.5.1",
+    "carbon-components-react": "^7.5.1",
+    "carbon-icons": "^7.0.7",
     "eslint": "^6.1.0",
     "gatsby": "^2.13.41",
     "gatsby-cli": "^2.7.20",
