--- a/package.json
+++ b/package.json
@@ -5,18 +5,19 @@
   "version": "0.1.0",
   "author": "Natnael Getahun <connect@ngetahun.me>",
   "dependencies": {
-    "@mdx-js/mdx": "^0.20.3",
+    "@mdx-js/mdx": "^1.4.0",
     "@mdx-js/react": "^1.1.4",
     "@mdx-js/tag": "^0.20.3",
     "carbon-components": "^10.5.1",
     "carbon-components-react": "^7.5.1",
     "carbon-icons": "^7.0.7",
-    "eslint": "^6.1.0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-flowtype": "^2.50.3",
     "gatsby": "^2.14.1",
     "gatsby-cli": "^2.7.21",
     "gatsby-image": "^2.2.14",
-    "gatsby-mdx": "^1.0.0",
     "gatsby-plugin-manifest": "^2.2.9",
+    "gatsby-plugin-mdx": "^1.0.42",
     "gatsby-plugin-offline": "^2.2.4",
     "gatsby-plugin-react-helmet": "^3.1.2",
     "gatsby-plugin-sharp": "^2.2.9",
@@ -37,9 +38,17 @@
     "remark-images": "^1.0.0",
     "remark-slug": "^5.1.2",
     "styled-components": "^4.3.2",
+    "styled-normalize": "^8.0.6",
+    "typescript": "^3.5.3",
     "unified-ui": "0.0.3"
   },
   "devDependencies": {
+    "@commitlint/cli": "^7.5.2",
+    "@commitlint/config-conventional": "^7.5.0",
+    "gatsby-plugin-root-import": "^2.0.5",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.5",
+    "node-sass": "^4.12.0",
     "prettier": "^1.18.2"
   },
   "keywords": [
@@ -48,12 +57,54 @@
   ],
   "license": "MIT",
   "scripts": {
+    "ci-check": "yarn format:diff",
+    "eject": "react-scripts eject",
+    "format": "prettier --write \"**/*.{js,md,scss}\"",
+    "format:diff": "prettier --list-different \"**/*.{js,md,scss}\"",
+    "format:staged": "prettier --write",
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
+    "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+  },
+  "lint-staged": {
+    "*.js": [
+      "yarn format:staged",
+      "git add"
+    ],
+    "*.{scss,css}": [
+      "yarn format:staged",
+      "git add"
+    ],
+    "*.md": [
+      "yarn format:staged",
+      "git add"
+    ]
+  },
+  "prettier": {
+    "jsxBracketSameLine": true,
+    "printWidth": 80,
+    "singleQuote": true,
+    "trailingComma": "es5"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -e $HUSKY_GIT_PARAMS",
+      "pre-commit": "lint-staged"
+    }
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   },
   "repository": {
     "type": "git",
