--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "gatsby-plugin-mdx": "^1.0.42",
     "gatsby-plugin-offline": "^2.2.4",
     "gatsby-plugin-react-helmet": "^3.1.2",
+    "gatsby-plugin-sass": "^2.1.15",
     "gatsby-plugin-sharp": "^2.2.9",
     "gatsby-remark-prismjs": "^3.3.3",
     "gatsby-source-filesystem": "^2.1.7",
     "gatsby-transformer-remark": "^2.6.19",
     "gatsby-transformer-sharp": "^2.2.12",
     "jshint": "^2.10.2",
+    "node-sass": "^4.12.0",
     "prism-react-renderer": "^0.1.7",
     "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
@@ -48,7 +50,6 @@
     "gatsby-plugin-root-import": "^2.0.5",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
-    "node-sass": "^4.12.0",
     "prettier": "^1.18.2"
   },
   "keywords": [
