--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "Natnael Getahun <connect@ngetahun.me>",
   "dependencies": {
+    "@carbon/grid": "^10.6.0",
+    "@carbon/themes": "^10.6.1",
     "@mdx-js/mdx": "^1.4.0",
     "@mdx-js/react": "^1.1.4",
     "@mdx-js/tag": "^0.20.3",
