--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rubybyexample",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Learn ruby by following some example code snippets.",
   "version": "0.1.0",
   "author": "Natnael Getahun <connect@ngetahun.me>",
   "dependencies": {
@@ -18,6 +18,8 @@
     "gatsby": "^2.14.1",
     "gatsby-cli": "^2.7.21",
     "gatsby-image": "^2.2.14",
+    "gatsby-plugin-google-analytics": "^2.1.20",
+    "gatsby-plugin-google-tagmanager": "^2.1.12",
     "gatsby-plugin-manifest": "^2.2.9",
     "gatsby-plugin-mdx": "^1.0.42",
     "gatsby-plugin-offline": "^2.2.4",
