--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+    "test": "jest"
   },
   "lint-staged": {
     "*.js": [
